--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <a (click)="homeGo()">Home</a>
-  <a (click)="listaEPisodeGo()">Episódios</a>
+  <a (click)="listaEpisodeGo()">Episódios</a>
   <a (click)="listCharacterGo()">Personagens</a>
 
   <div class="mt-auto text-center">
