--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,2 +1,4 @@
-
-
+<div class="text-center">
+  <h1 class="text-white" style="  font-size: 100px;
+">Teste Front End Angular Rick and Morty</h1>
+</div>
